Listagem e cadastro de estoque

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -13,8 +13,7 @@
             <h:commandButton action="listarAnimais.xhtml" value="Animais"/>
             <h:commandButton action="listarDenuncias.xhtml" value="Denuncias"/>
             <h:commandButton action="listarExperiencias.xhtml" value="Experiencias"/>
-            <h:commandButton action="index.xhtml" value="Eventos"/>
-            <h:commandButton action="index.xhtml" value="ONGs"/>
+            <h:commandButton action="listarEstoques.xhtml" value="Estoques"/>
             <h:commandButton action="loginSignin.xhtml" value="Login/Signin"/>
         </h:form>
         
