Tratamento de tipo de usuarios: Pessoa Fisica(Helpers) e Pessoa Juridica(ONGs e Clinicas e Petshops). Back: listagens por id (animal, anuncio, encontro, estoque, evento e experiencia), listagem de ONGs e Clinicas e Petshops.

--- a/web/loginSignin.xhtml
+++ b/web/loginSignin.xhtml
@@ -14,6 +14,7 @@ and open the template in the editor.
     </head>
     <body>
         <h2>Login</h2>
+        <h:outputText value="#{loginBean.usuarioLogado.nomeUsuario}"/>
         <h:form>
             Email:
             <h:inputText value="#{loginBean.email}"/>
