--- a/web/menu.xhtml
+++ b/web/menu.xhtml
@@ -10,15 +10,15 @@
         <b:navbarLinks>
             <b:navLink value="" href="index.jsf"><p style="font-size: 22px; color: #ffa812;">Help Pet</p></b:navLink>
             <b:navLink value="" href="animais.jsf"><p style="font-size: 16px; color: #ffa812;">Animais</p></b:navLink>
-            <b:navLink value="" href="#"><p style="font-size: 16px; color: #ffa812;">ONGs</p></b:navLink>
-            <b:navLink value="" href="#"><p style="font-size: 16px; color: #ffa812;">Clínicas/Pet Shops</p></b:navLink>
+            <b:navLink value="" href="ongs.jsf"><p style="font-size: 16px; color: #ffa812;">ONGs</p></b:navLink>
+            <b:navLink value="" href="clinicasPetshops.jsf"><p style="font-size: 16px; color: #ffa812;">Clínicas/Pet Shops</p></b:navLink>
             <b:navLink value="" href="eventos.jsf"><p style="font-size: 16px; color: #ffa812;">Eventos</p></b:navLink>
             <b:navLink value="" href="anuncios.jsf"><p style="font-size: 16px; color: #ffa812;">Anúncios</p></b:navLink>
             <b:navLink value="" href="experiencias.jsf"><p style="font-size: 16px; color: #ffa812;">Espaço Helper</p></b:navLink>
             <b:navLink value="" href="denuncias.jsf"><p style="font-size: 16px; color: #ffa812;">Denúncias</p></b:navLink>
         </b:navbarLinks>
         <b:navbarLinks pull="right">
-            <b:navLink value="" href="login.jsf"><p style="font-size: 16px; color: #ffa812; font-weight:bold;">Login</p></b:navLink>
+            <b:navLink value="" href="loginSignin.jsf"><p style="font-size: 16px; color: #ffa812; font-weight:bold;">Login</p></b:navLink>
             <b:navLink value="" href="cadastrarUsuario.jsf"><p style="font-size: 16px; color: #ffa812; font-weight:bold;">Cadastro</p></b:navLink>
         </b:navbarLinks>
     </b:navBar>
