Front: ver anuncio, ver experiencia, ver evento, ver ong, ver clinica/petshop

--- a/web/anuncios.xhtml
+++ b/web/anuncios.xhtml
@@ -81,12 +81,14 @@
                 <c:forEach var="anuncio" items="#{anuncioBean.anuncios}">
                     <div class="col-xs-18 col-sm-6 col-md-3">
                         <div class="thumbnail">
-                            <img src="imagens/gato1.png" alt="Foto do animal" style="width:auto; height:280px;"/>
+                            <img src="imagens/gato2.jpg" alt="Foto do animal" style="width:auto; height:280px;"/>
                             <div class="caption" align="center">
                                 <h3>#{anuncio.tituloAnuncio}</h3>
                                 <p>#{anuncio.tipoAnuncio}</p>
                                 <p>#{anuncio.descricaoAnuncio}</p>
-                                <p><a href="verAnuncio.jsf" class="btn btn-default" style="background-color: #ffa812; color: white;"><span class="glyphicon glyphicon-plus"></span><span></span>Ver Mais</a></p>
+                                <h:form>
+                                <p><b:commandButton action="#{anuncioBean.VerAnuncio(anuncio)}" value="Ver Mais" class="btn btn-default" style="background-color: #ffa812; color: white;"/></p>
+                                </h:form>
                             </div>
                         </div>
                     </div>
