--- a/web/eventos.xhtml
+++ b/web/eventos.xhtml
@@ -82,7 +82,9 @@
                                 <h3>#{evento.nomeEvento}</h3>
                                     <p>Data #{evento.dataEvento}</p>
                                     <p>Local: #{evento.idLocalizacao}</p>
-                                <p><a href="verEvento.jsf" class="btn btn-default" style="background-color: #ffa812; color: white;"><span class="glyphicon glyphicon-plus"></span><span></span>Ver Mais</a></p>
+                                <h:form>
+                                <p><b:commandButton action="#{eventoBean.VerEvento(evento)}" value="Ver Mais" class="btn btn-default" style="background-color: #ffa812; color: white;"/></p>
+                                </h:form>
                             </div>
                         </div>
                     </div>
