--- a/web/animais.xhtml
+++ b/web/animais.xhtml
@@ -71,6 +71,9 @@
                     <b:column col-md="1">
                         <b:button value="Ok" style="background-color: #ffa812; color: white;" class="btn btn-default"/>
                     </b:column>
+                    <b:column col-md="1">
+                        <b:commandButton action="#{animalBean.MeusAnimais()}" value="Meus Animais" class="btn btn-default" style="background-color: #ffa812; color: white;"/>
+                    </b:column>
                 </h:form>
             </b:row>
 
